--- a/scss/all-backs/_header.scss
+++ b/scss/all-backs/_header.scss
@@ -2,6 +2,12 @@
   .header{
     margin: 40px 20px;
 
+    & .container{
+    display: flex;
+    justify-content: space-between;
+      }
+
+
     &  .nav__list{
         display: flex;
       }
