--- a/scss/all-backs/_tol.scss
+++ b/scss/all-backs/_tol.scss
@@ -1,50 +1,47 @@
 .tol{
-    & .container{
-        width:1280px ;
-        height:962 ;
-        margin-top: 280px;
-        background-image: url(../img/Bitmaporqafon1.png);
-        background-repeat: no-repeat;
-      }
+  margin-top: 80px;
+  &--list{
+    display: flex;
+  }
 
-      &  .til{
-        background-image: url(../img/Bitmap.jpg);
-        background-repeat: no-repeat;
-        width: 445px;
-        height: 474px;
-       margin-left: 650px;
-        transform: translateY(-400px);
-      }
+  &--item{
+    padding-left: 40px;
+  }
 
-      &  .tol--heading{
-        padding-top: 50px;
-        color: #FEFCF7;
-        font-family: "Fraunces";
-        font-size: 40px;
-        font-style: normal;
-        font-weight: 900;
-        line-height: 48px;
-      }
+  li,a{
+    list-style: none;
+  }
 
-      &   .tol--heading{
-        padding-top: 50px;
-        color: #FEFCF7;
-        font-family: "Fraunces";
-        font-size: 40px;
-        font-style: normal;
-        font-weight: 900;
-        line-height: 48px;
-      }
+  &--heading{
+    font-family:" Jost";
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 26px;
+    letter-spacing: 5px;
+    text-align: center;
+    width: 350px;
+    height: 26px;
+    text-align: center;
+  }
 
-      & .tol--text{
-        color: #FEFCF7;
-        font-family: "Barlow";
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 26px; 
-        width: 540px;
-      }
-      
-      
+  &--text{
+    font-family:" Jost";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0px;
+    text-align: center;
+    width: 350px;
+    height: 104px;
+  }
+
+  &--img2{
+    margin-top: 25px;
+  }
+
+  &--img3{
+    margin-top: 35px;
+    margin-bottom: 40px;
+  }
+
 }
