--- a/scss/all-backs/_header.scss
+++ b/scss/all-backs/_header.scss
@@ -34,15 +34,19 @@
         padding-left: 33px;
     }
     
+     & .nav__item{
+      margin-top: -20px;
+     }
     
 
     & .nav__link{
-        color: black;
-        font-family:" Barlow";
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 15px;
+      font-family: "Jost";
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 14px;
+      letter-spacing: 2px;
+      text-align: left;
+      color:#333136;
     }
     
 
