--- a/scss/all-backs/_hero.scss
+++ b/scss/all-backs/_hero.scss
@@ -1,39 +1,49 @@
 .hero{
-    margin-top: 45px;
-
-    & .container{
-        background-image:url(../img/Bitmap.png);
+    .container{
+        background-image: url(../img/Grouporqafon.png);
         background-repeat: no-repeat;
-        width: 1280px;
-        height: 450px;
-        border-radius: 10px;
+        width: 1111px;
+        height: 640px;
     }
 
-   & .hero--heading{
+    &--heading{
         margin: 0;
         padding: 0;
-        margin-top: 100px;
-        margin-left: 80px;
-        color: #FEFCF7;
-        font-family: "Fraunces ";
-         font-size: 40px;
-       font-weight: 900;
-        line-height: 48px; 
+        font-family: "Jost";
+        font-size: 48px;
+        font-weight: 500;
+        line-height: 48px;
+        letter-spacing: 0px;
+        text-align: left;
+        width: 620px;
+        height: 165px;
+        padding-top: 145px;
+        padding-left: 95px;
+
     }
-    
-    
-   & .hero--text{
-    margin: 0;
-    padding: 0;
-    margin-left: 40px;
-    margin-top: 20px;
-    width: 445px;
-    color: #FEFCF7;
-    font-family:" Barlow";
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 26px;
-   }
-    
+
+
+    &--text{
+        margin: 0;
+        padding: 0;
+        width: 445px;
+        height: 78px;
+        font-family: "Jost";
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        letter-spacing: 0px;
+        text-align: left;      
+        padding-top:155px;
+        padding-left: 95px;
+
+    }
+    .button{
+        margin-left: 95px;
+        margin-top: 110px;
+        width: 152px;
+        height: 56px;
+        border-radius: 8px;
+        background: #FFF;
+    }
 }
